--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<p align="center">
+<p align="center" style="font-family:verdana">
     <img src="https://cdn.discordapp.com/attachments/716194103813210180/721050026427809863/ezpezialet-sense-fondo-llnegres_2.png"     alt="Logo Ezpezialet"  width="524" height="190">
 </p>
 
 
-<p align="center">
+<p align="center" style="font-family:verdana">
   <a href="https://top.gg/bot/553883586210562060">
     <img src="https://top.gg/api/widget/status/553883586210562060.svg?noavatar=true" alt="Discord Bots">
     <img src="https://top.gg/api/widget/lib/553883586210562060.svg?noavatar=true" alt="">
@@ -14,25 +14,25 @@
     <img src="https://img.shields.io/pypi/v/discord.py?label=discord.py" alt="">
 </p>
 
-<hr>
-<h3 id="dels-primers-bots-de-discord-en-catal-">Dels primers bots de discord en català</h3>
-<p>Encara que no ho sembli, aquest &eacute;s el primers bots de discord en catal&agrave;. I de moment, l&#39;&uacute;nic. (públic)<br>Als inicis del bot, era un bot completament privat, per&ograve; em vaig adonar de que no hi havia cap bot de discord en catal&agrave;, i vaig decidir fer-lo public.<br />De moment, el bot &eacute;s només en catal&agrave; per&ograve; podria ser que alg&uacute;n dia fes una versi&oacute; tradu&iuml;da.</p>
+<hr style="font-family:verdana">
+<h3 id="dels-primers-bots-de-discord-en-catal-" style="font-family:verdana">Dels primers bots de discord en català</h3>
+<p  style="font-family:verdana">Encara que no ho sembli, aquest &eacute;s el primers bots de discord en catal&agrave;. I de moment, l&#39;&uacute;nic. (públic)<br>Als inicis del bot, era un bot completament privat, per&ograve; em vaig adonar de que no hi havia cap bot de discord en catal&agrave;, i vaig decidir fer-lo public.<br />De moment, el bot &eacute;s només en catal&agrave; per&ograve; podria ser que alg&uacute;n dia fes una versi&oacute; tradu&iuml;da.</p>
 <ul>
-<li>☑️ Moderació</li>
-<li>☑️ Personalització del servidor</li>
-<li>☑️ Utilitat</li>
-<li>☑️ Diversió</li>
-<li>❌ Prefix personalitzat</li>
-<li>❌ Missatges de entrada</li>
-<li>❌ Sistema XP</li>
+<li style="font-family:verdana">☑️ Moderació</li>
+<li style="font-family:verdana">☑️ Personalització del servidor</li>
+<li style="font-family:verdana">☑️ Utilitat</li>
+<li style="font-family:verdana">☑️ Diversió</li>
+<li style="font-family:verdana">❌ Prefix personalitzat</li>
+<li style="font-family:verdana">❌ Missatges de entrada</li>
+<li style="font-family:verdana">❌ Sistema XP</li>
 </ul>
 <h4 id="prefix-">Prefix:</h4>
-<p><code>zz!</code></p>
-<h4 id="tota-l-informaci-">Tota l&#39;informació:</h4>
-<p><code>zz!info</code></p>
-<h4 id="lista-de-comandaments-">Lista de comandaments:</h4>
-<p><code>zz!help</code> / <a href="https://github.com/MrOrange9-JCT/Ezpezialet/wiki/Comandaments"><strong>Clic Aquí</strong></a></p>
-<h4 id="top-gg-invita-al-bot-">Top.gg (invita al bot):</h4>
-<p><a href="https://top.gg/bot/553883586210562060" title="Fes clic aqui per anar a la pàgina de top.gg">Clic Aquí</a></p>
-<h4 id="creador-">Creador:</h4>
-<p><a href="https://www.twitch.tv/mrorange9jct"><img src="https://img.shields.io/badge/MrOrange9__JCT-Twitch-blueviolet?logo=twitch&amp;logoColor=ffffff" alt=""></a> <a href="https://www.youtube.com/channel/UCPeW7VCCyDmXl2Gv-CCZJXw"><img src="https://img.shields.io/badge/MrOrange9%20JCT-YouTube-ff0000?logo=youtube" alt=""></a> <img src="https://img.shields.io/badge/MrOrange9__JCT%239999-Discord-%237289DA?logo=discord&amp;logoColor=ffffff" alt=""> <a href="https://www.instagram.com/mrorange9_jct/"><img src="https://img.shields.io/badge/mrorange9__jct-Instagram-E1306C?logo=instagram&amp;logoColor=ffffff" alt=""></a> <a href="https://github.com/MrOrange9-JCT"><img src="https://img.shields.io/badge/MrOrange9--JCT-GitHub-lightgrey?logo=github" alt=""></a> <a href="https://steamcommunity.com/id/mrorange9jct/"><img src="https://img.shields.io/badge/MrOrange9%20JCT-Steam-32668f?logo=steam" alt=""></a></p>
+<p style="font-family:verdana"><code>zz!</code></p>
+<h4 id="tota-l-informaci-" style="font-family:verdana">Tota l&#39;informació:</h4>
+<p style="font-family:verdana"><code>zz!info</code></p>
+<h4 id="lista-de-comandaments-" style="font-family:verdana">Lista de comandaments:</h4>
+<p style="font-family:verdana"><code>zz!help</code> / <a href="https://github.com/MrOrange9-JCT/Ezpezialet/wiki/Comandaments"><strong>Clic Aquí</strong></a></p>
+<h4 id="top-gg-invita-al-bot-" style="font-family:verdana">Top.gg (invita al bot):</h4>
+<p style="font-family:verdana"><a href="https://top.gg/bot/553883586210562060" title="Fes clic aqui per anar a la pàgina de top.gg">Clic Aquí</a></p>
+<h4 id="creador-" style="font-family:verdana">Creador:</h4>
+<p style="font-family:verdana"><a href="https://www.twitch.tv/mrorange9jct"><img src="https://img.shields.io/badge/MrOrange9__JCT-Twitch-blueviolet?logo=twitch&amp;logoColor=ffffff" alt=""></a> <a href="https://www.youtube.com/channel/UCPeW7VCCyDmXl2Gv-CCZJXw"><img src="https://img.shields.io/badge/MrOrange9%20JCT-YouTube-ff0000?logo=youtube" alt=""></a> <img src="https://img.shields.io/badge/MrOrange9__JCT%239999-Discord-%237289DA?logo=discord&amp;logoColor=ffffff" alt=""> <a href="https://www.instagram.com/mrorange9_jct/"><img src="https://img.shields.io/badge/mrorange9__jct-Instagram-E1306C?logo=instagram&amp;logoColor=ffffff" alt=""></a> <a href="https://github.com/MrOrange9-JCT"><img src="https://img.shields.io/badge/MrOrange9--JCT-GitHub-lightgrey?logo=github" alt=""></a> <a href="https://steamcommunity.com/id/mrorange9jct/"><img src="https://img.shields.io/badge/MrOrange9%20JCT-Steam-32668f?logo=steam" alt=""></a></p>
